# Linkedin_Post_Generation_Automation

./: README.md  main.py  pyproject.toml  requirements.txt
Backend/: README.md  main.py  mydb.db  newDb.db  pyproject.toml  requirements.txt
Backend/src/: .env  database.py  hashing.py  models.py  oauth2.py  schemas.py  token_utils.py
Backend/src/repositery/: post_content.py  posting_api.py  posts.py  users.py
Backend/src/routers/: authentication.py  generate_post.py  posting_api.py  posts.py  users.py
Frontend/dashboard/: package-lock.json  package.json
Frontend/dashboard/src/: App.jsx
Frontend/dashboard/src/components/: CreateLinkedInPost.jsx  DeletePostButton.jsx  Login.jsx  PostDetail.jsx  PostEdit.jsx  PostForm.jsx  PostItem.jsx  PostList.jsx  PostToLinkedinButton.jsx  ProtectedPageLayout.jsx  Signup.jsx  UpdatePostForm.jsx
Frontend/dashboard/src/services/: api.js
src/: .posts.db  __init__.py  database.py  models.py  mydb.db  schemas.py
src/repositery/: post_content.py  posts.py  users.py
src/routers/: authentication.py  posts.py  users.py
